Database.php updated

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_TYPE=mysql
 DB_HOST=localhost
-DB_NAME=vapita_mvc
+DB_NAME=baldur
 DB_USER=root
 DB_PASS=
 
-APP_SECRET=benvocatus_
+APP_SECRET=baldur_
 APP_ENV=development
