--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "btinet/baldur",
     "description": "A simple php framework inspired by SimpleMVC and Symfony",
+    "minimum-stability": "dev",
     "require": {
         "symfony/dotenv": "^5.1",
         "twig/twig": "^3.0",
