--- a/composer.json
+++ b/composer.json
@@ -2,34 +2,17 @@
     "name": "btinet/baldur",
     "description": "A simple php framework inspired by SimpleMVC and Symfony",
     "minimum-stability": "dev",
+    "type": "project",
     "require": {
         "symfony/dotenv": "^5.1",
         "twig/twig": "^3.0",
       "ext-pdo": "*",
-        "slowprog/composer-copy-file": "~0.3"
+        "composer/installers": "~1.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/",
             "Btinet\\Baldur\\": "baldur/"
-        }
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "SlowProg\\CopyFile\\ScriptHandler::copy"
-        ],
-        "post-update-cmd": [
-            "SlowProg\\CopyFile\\ScriptHandler::copy"
-        ]
-    },
-    "extra": {
-        "copy-file": {
-            "vendor/btinet/baldur/assets": "assets/",
-            "vendor/btinet/baldur/public": "public/",
-            "vendor/btinet/baldur/src": "src/",
-            "vendor/btinet/baldur/templates": "templates/",
-            "vendor/btinet/baldur/.env": "/",
-            "vendor/btinet/baldur/webpack.config.js": "/"
         }
     }
 }
