--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "role": "Developer"
         }
     ],
+    "license": "MIT",
     "description": "A simple php framework inspired by SimpleMVC and Symfony",
     "minimum-stability": "dev",
     "type": "project",
