--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,12 @@
     "type": "project",
     "version": "1.0",
     "require": {
-        "symfony/dotenv": "^5.1",
-        "twig/twig": "^3.0",
-      "ext-pdo": "*",
+        "btinet/ringhorn" : "*",
         "composer/installers": "~1.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "Btinet\\Baldur\\": "baldur/"
+            "App\\": "src/"
         }
     }
 }
