--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 DB_TYPE=mysql
 DB_HOST=localhost
-DB_NAME=baldur
+DB_NAME=test
 DB_USER=root
 DB_PASS=
 
 APP_SECRET=baldur_
 APP_ENV=development
+
+DEFAULT_CONTROLLER=App\Controller\BaseController
