--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "type": "project",
     "require": {
         "btinet/ringhorn" : "^1.0",
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "twig/intl-extra": "2.x-dev"
     },
     "autoload": {
         "psr-4": {
