user registration added

--- a/.env
+++ b/.env
@@ -1,10 +1,16 @@
+# Database Credentials
 DB_TYPE=mysql
 DB_HOST=localhost
 DB_NAME=test
 DB_USER=root
 DB_PASS=
 
-APP_SECRET=baldur_
+# App Environment
+APP_SECRET=29a5b4d0168040c91c31ee2dd786e0ab04f58ffd
 APP_ENV=development
 
+# Default Controller
 DEFAULT_CONTROLLER=App\Controller\BaseController
+
+# User Settings
+USER_CONTROLLER=App\Entity\User
