--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "devDependencies": {
+    "@popperjs/core": "^2.9.1",
     "@symfony/webpack-encore": "^0.31.0",
-    "node-sass": "^5.0.0",
+    "bootstrap-icons": "^1.4.0",
+    "postcss": "^8.2.8",
+    "postcss-loader": "^5.1.0",
     "sass-loader": "9.0.1",
     "webpack-notifier": "1.6.0"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta2",
+    "node-sass": "4.14.1",
     "tablesorter": "^2.31.3",
     "uikit": "^3.5.9"
   }
